release 0.2.1 (2007-08-xx)
- Simpler getting started document included.
- Fixed bug that caused matrix parameters to be decoded twice.
- JAXB beans can be serialized as JSON or XML using one HTTP method with
  a @ProduceMime({"application/xml", "application/json"}).
- For an HTTP method that produces more than one media type automatically
  select the appropriate media type according to what is acceptable. This
  enables a developer to implement one method for the returning of a JAXB 
  bean that can be serialized as XML or JSON.
- Rename the zip of the Jersey respository from 'jersey-src' to 
  'jersey-snapshot'.
- Include zip of 311 src and Jersey src in the lib directory of the 
  distribution to faciliate easier debugging.
- Fixed bug in light weight HTTP server container that caused query parameters
  to be decoded twice and incorrectly extracted from the URI query string.
- JSON entity providers added to support JSONArray and JSONObject 
  entities from Jettison.

release 0.2 (2007-07-19)
- include Allow header in a 405 (Method Not Allowed) response.
- support by default OPTIONS request if OPTIONS is not implemented.
- support by default HEAD request if HEAD is not implemented by calling GET 
  and removing the entity.
- fixed WADL generation mixing up produce/consume information when generating
  responses.
- fixed WADL generation not correctly determining the HTTP method from 
  @HttpMethod Java method name.
- WebApplication.initiate can only be called once. Throw exception on subsequent
  calls.
- Removed implementation of @SubResources, equivalent functionality supported 
  by sub-resource locator methods.
- Removed implementation of @UnmatchedPath, equivalent functionality supported 
  by greedy parameter on @UriTemplate.
- JSON support added to JAXB entity provider for use with "application/json",
  media type. BadgerFish convention is used. Runtime dependency on jettison jar.
- Views refactored to work correctly in combination with HTTP methods